--- a/admin-kanban/package.json
+++ b/admin-kanban/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@firebase/storage": "^0.13.7",
     "@reduxjs/toolkit": "^2.6.0",
     "@tinymce/tinymce-react": "^6.0.0",
     "antd": "^5.23.4",
