--- a/admin-kanban/package.json
+++ b/admin-kanban/package.json
@@ -22,6 +22,7 @@
     "firebase": "^11.3.1",
     "iconsax-react": "^0.0.8",
     "query-string": "^9.1.1",
+    "re-resizable": "^6.11.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
@@ -29,7 +30,8 @@
     "react-icons": "^5.5.0",
     "react-image-file-resizer": "^0.4.8",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -37,6 +39,7 @@
     "@types/react": "^19.0.8",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^19.0.3",
+    "@types/xlsx": "^0.0.36",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
